[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/cyberspace/spaceship/cockpit/models/cockpit-col.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://objects/cyberspace/spaceship/cockpit/Cockpit.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 6.8, 3.8, 5.2 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 20, 10 )

[sub_resource type="Shader" id=3]
code = "shader_type spatial;

void fragment() {
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0, 1, 1, 0.145098 )
metallic = 1.0
roughness = 0.0

[node name="Cockpit" type="KinematicBody"]
script = ExtResource( 2 )

[node name="shape0" type="CollisionShape" parent="."]
transform = Transform( -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="SpaceScreen" type="Spatial" parent="."]
visible = false

[node name="Quad" type="MeshInstance" parent="SpaceScreen"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Viewport" type="Viewport" parent="SpaceScreen/Quad"]
size = Vector2( 1920, 1080 )
render_target_v_flip = true

[node name="SpaceCam" type="Camera" parent="SpaceScreen/Quad/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.6 )
near = 200.0
far = 500000.0

[node name="cockpit" type="MeshInstance" parent="."]
transform = Transform( -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = SubResource( 5 )

[node name="PilotCam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.6 )
current = true
far = 500000.0

[node name="Speedometer" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "0"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
